<resources>
    <string name="app_name">Popular Controls</string>
    <string name="button">ADD</string>
    <string name="editText">Number</string>
    <string name="editText2">Number</string>
    <string name="textView">SUM=</string>

    <string name="imageButton">Logo1</string>
    <string name="imageButton2">Logo2</string>
    <string name="Switch">Show/Hide</string>
    <string name="ToogleButton_on">ON</string>
    <string name="ToogleButton_off">OFF</string>
    <string name="imageView">Image</string>

    <string name="textView1">Number</string>
    <string name="TextName">Enter Example Text</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
</resources>